re PR tree-optimization/53340 (rnflow.f90 is ~20% slower after revision 187092)

2012-05-14  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/53340
	* tree-ssa-pre.c (op_valid_in_sets): Fix error in last commit.

From-SVN: r187457